tests/errors/syn.overflow.u16-value.or
main :: () -> void {
    x := 100000u16;
    x;
};